# bdbmsgstore

./: COPYING.v3  Makefile.am  Makefile.in  README  aclocal.m4  config.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
docs/: Makefile.in  jrnl_tmpl.dox
lib/: AsyncOperationLogger.cpp  AsyncOperationLogger.h  BdbMessageStoreImpl.cpp  BdbMessageStoreImpl.h  BdbStorePlugin.cpp  BdbStoreProvider.cpp  BdbStoreProvider.h  BindingDbt.cpp  BindingDbt.h  BufferValue.cpp  BufferValue.h  Cursor.h  IdSequence.cpp  IdSequence.h  JournalImpl.cpp  JournalImpl.h  Makefile.am  Makefile.in  MessageStorePlugin.cpp  MessageStorePlugin.h  PendingOperationSet.h  PendingOperationType.h  PidTracker.cpp  PidTracker.h  StorageProvider.h  StoreException.h  StoreOptions.h  StorePlugin.loT  TxnCtxt.cpp  TxnCtxt.h  db-inc.h  jcontroller.cpp  jcontroller.hpp  jinf.loT  qmf-schema.xml  txn_rec.loT
lib/jrnl/: jdir.cpp  jdir.hpp
